[gd_scene load_steps=34 format=3 uid="uid://i62lhfxlsymg"]

[ext_resource type="Script" path="res://level_stuff/levels/level_1_1.gd" id="1_nrsi2"]
[ext_resource type="PackedScene" uid="uid://b6dph58aj4tme" path="res://player/player.tscn" id="1_qyvy7"]
[ext_resource type="Script" path="res://ui/camera.gd" id="2_oefhc"]
[ext_resource type="PackedScene" uid="uid://q5kj08qhck4m" path="res://level_stuff/interactables/level_end.tscn" id="3_wr0oy"]
[ext_resource type="AudioStream" uid="uid://qajtv1gyj6ym" path="res://audio/parriedsfx.wav" id="4_mwyo1"]
[ext_resource type="PackedScene" uid="uid://dhoylud6i8xce" path="res://ui/health.tscn" id="5_e60fe"]
[ext_resource type="PackedScene" uid="uid://c75vgbv1f385j" path="res://ui/staminabar.tscn" id="6_nbrhi"]
[ext_resource type="PackedScene" uid="uid://bnd30ew1s2oj2" path="res://menu/pausemenu.tscn" id="7_f5tmn"]
[ext_resource type="PackedScene" uid="uid://mdr2cg4tof1l" path="res://menu/gameoverscreen.tscn" id="8_p8ice"]
[ext_resource type="PackedScene" uid="uid://bkv4xhrs4iujk" path="res://level_stuff/walls/white_wall.tscn" id="10_ftb1a"]
[ext_resource type="PackedScene" uid="uid://bptyktkioc14g" path="res://level_stuff/interactables/white_interactable.tscn" id="11_aue4x"]
[ext_resource type="PackedScene" uid="uid://bhymmhmwkev2j" path="res://level_stuff/walls/white_wall_no_script.tscn" id="12_406be"]
[ext_resource type="PackedScene" uid="uid://ctsrcip8qttp7" path="res://level_stuff/walls/lock_wall.tscn" id="14_fncu6"]
[ext_resource type="PackedScene" uid="uid://bi4kfgiywfilj" path="res://enemies/red/red_spawn.tscn" id="14_x2njw"]
[ext_resource type="AudioStream" uid="uid://i5y7t3acup7r" path="res://audio/deathsfx.wav" id="15_tbgps"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_5imyo"]
scenes/1/scene = ExtResource("10_ftb1a")

[sub_resource type="TileSet" id="TileSet_nqv5j"]
sources/0 = SubResource("TileSetScenesCollectionSource_5imyo")

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_xmvq6"]
scenes/1/scene = ExtResource("10_ftb1a")

[sub_resource type="TileSet" id="TileSet_kvm6y"]
sources/0 = SubResource("TileSetScenesCollectionSource_xmvq6")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vvhdu"]
size = Vector2(735, 10)

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_x2ym3"]
scenes/1/scene = ExtResource("10_ftb1a")

[sub_resource type="TileSet" id="TileSet_f6qy8"]
sources/0 = SubResource("TileSetScenesCollectionSource_x2ym3")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abar2"]
size = Vector2(16, 96)

[sub_resource type="Curve" id="Curve_e30u8"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_5rtyh"]
scenes/2/scene = ExtResource("12_406be")

[sub_resource type="TileSet" id="TileSet_hkh7d"]
sources/0 = SubResource("TileSetScenesCollectionSource_5rtyh")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oi15e"]
size = Vector2(1344, 16)

[sub_resource type="Environment" id="Environment_wvwa6"]
background_mode = 3
glow_enabled = true
glow_levels/2 = 1.0
glow_levels/3 = 0.0
glow_levels/5 = 0.0
glow_strength = 2.0
glow_blend_mode = 0
glow_hdr_threshold = 4.0

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_fxcx1"]
scenes/2/scene = ExtResource("14_fncu6")

[sub_resource type="TileSet" id="TileSet_njsg3"]
sources/0 = SubResource("TileSetScenesCollectionSource_fxcx1")

[sub_resource type="Gradient" id="Gradient_pa7td"]
offsets = PackedFloat32Array(0, 0.55, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.196078, 1, 1, 1, 0)
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="CircleShape2D" id="CircleShape2D_tdsa1"]
radius = 124.952

[sub_resource type="Gradient" id="Gradient_n12bs"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="level 1-1" type="Node2D" groups=["not beamable"]]
script = ExtResource("1_nrsi2")

[node name="player" parent="." instance=ExtResource("1_qyvy7")]
process_mode = 4
visible = false
position = Vector2(228, -1016)

[node name="camera" type="Camera2D" parent="."]
position = Vector2(228, -1016)
position_smoothing_speed = 20.0
script = ExtResource("2_oefhc")

[node name="level_end" parent="." instance=ExtResource("3_wr0oy")]
position = Vector2(228, -1016)
collision_layer = 0
collision_mask = 0

[node name="start_levelsfx" type="AudioStreamPlayer2D" parent="level_end"]
stream = ExtResource("4_mwyo1")
volume_db = -10.0
pitch_scale = 0.75

[node name="ui" type="CanvasLayer" parent="."]

[node name="health" parent="ui" instance=ExtResource("5_e60fe")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 126.0
offset_top = 932.0
offset_right = 126.0
offset_bottom = 932.0
grow_horizontal = 1
grow_vertical = 1
metadata/_edit_use_anchors_ = true

[node name="staminabar" parent="ui" instance=ExtResource("6_nbrhi")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 56.0
offset_top = 960.0
offset_right = 56.0
offset_bottom = 960.0
grow_horizontal = 1
grow_vertical = 1
metadata/_edit_use_anchors_ = true

[node name="pausemenu" parent="ui" instance=ExtResource("7_f5tmn")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3442.0
offset_top = -2103.0
offset_right = 3421.0
offset_bottom = 2191.0

[node name="gameoverscreen" parent="ui" instance=ExtResource("8_p8ice")]

[node name="white_walls" type="TileMap" parent="."]
tile_set = SubResource("TileSet_nqv5j")
format = 2
layer_0/tile_data = PackedInt32Array(4325394, 0, 65536, 4325395, 0, 65536, 4325396, 0, 65536, 4325397, 0, 65536, 4325398, 0, 65536, 4325399, 0, 65536, 4325400, 0, 65536, 4325401, 0, 65536, 4325402, 0, 65536, 4325403, 0, 65536, 4325404, 0, 65536, 4325405, 0, 65536, 4325406, 0, 65536, 4325407, 0, 65536, 4325408, 0, 65536, 4325409, 0, 65536, 4325410, 0, 65536, 4325411, 0, 65536, 4325412, 0, 65536, 4325413, 0, 65536, 4325414, 0, 65536, 4325415, 0, 65536, 4325416, 0, 65536, 4325417, 0, 65536, 4325418, 0, 65536, 4325419, 0, 65536, 4325420, 0, 65536, 4325421, 0, 65536, 4325422, 0, 65536, 4325423, 0, 65536, 4325424, 0, 65536, 4325425, 0, 65536, 4325426, 0, 65536, 4325427, 0, 65536, 4325428, 0, 65536, 4325429, 0, 65536, 4325430, 0, 65536, 4325431, 0, 65536, 4325432, 0, 65536, 4325433, 0, 65536, 4325434, 0, 65536, 4325435, 0, 65536, 4325436, 0, 65536, 4325437, 0, 65536, 4325438, 0, 65536, 4325439, 0, 65536, 4325440, 0, 65536, 4325441, 0, 65536, 4325442, 0, 65536, 4325443, 0, 65536, 2424864, 0, 65536, 2424865, 0, 65536, 2424866, 0, 65536, 2424867, 0, 65536, 2424868, 0, 65536, 2424869, 0, 65536, 2424870, 0, 65536, 2424871, 0, 65536, 2424872, 0, 65536, 2424873, 0, 65536, 2424874, 0, 65536, 2424875, 0, 65536, 2424876, 0, 65536, 2424877, 0, 65536, 2424878, 0, 65536, 2424879, 0, 65536, 2424880, 0, 65536, 2424881, 0, 65536, 2424882, 0, 65536, 2424883, 0, 65536, 2424884, 0, 65536, 2424885, 0, 65536, 2424886, 0, 65536, 2424887, 0, 65536, 2424888, 0, 65536, 2424889, 0, 65536, 2424890, 0, 65536, 2424891, 0, 65536, 2424892, 0, 65536, 2424893, 0, 65536, 2424894, 0, 65536, 2424895, 0, 65536, 2424896, 0, 65536, 2424897, 0, 65536, 2424898, 0, 65536, 2424899, 0, 65536, 4325444, 0, 65536, 4325445, 0, 65536, 4325446, 0, 65536, 4325447, 0, 65536, 4325448, 0, 65536, 4325449, 0, 65536, 4325450, 0, 65536, 4325451, 0, 65536, 4325452, 0, 65536, 4325453, 0, 65536, 4325454, 0, 65536, 4325455, 0, 65536, 4325456, 0, 65536, 4325457, 0, 65536, 4325458, 0, 65536, 2424900, 0, 65536, 2424901, 0, 65536, 2424902, 0, 65536, 2424903, 0, 65536, 2424904, 0, 65536, 2424905, 0, 65536, 2424906, 0, 65536, 2424907, 0, 65536, 2424908, 0, 65536, 2424909, 0, 65536, 2424910, 0, 65536, 2424911, 0, 65536, 2424912, 0, 65536, 2424913, 0, 65536, 2424914, 0, 65536, 2424915, 0, 65536, 2424916, 0, 65536, 2490455, 0, 65536, 2555993, 0, 65536, 2555994, 0, 65536, 2555995, 0, 65536, 2621532, 0, 65536, 2621533, 0, 65536, 2621534, 0, 65536, 2687071, 0, 65536, 2687072, 0, 65536, 2687073, 0, 65536, 2752613, 0, 65536, 2818151, 0, 65536, 2818152, 0, 65536, 2883691, 0, 65536, 2949230, 0, 65536, 3014768, 0, 65536, 3014769, 0, 65536, 3014770, 0, 65536, 3080307, 0, 65536, 3080308, 0, 65536, 3080309, 0, 65536, 3145846, 0, 65536, 3145847, 0, 65536, 4325459, 0, 65536, 4325460, 0, 65536, 4259927, 0, 65536, 4194395, 0, 65536, 4128862, 0, 65536, 4063328, 0, 65536, 4063329, 0, 65536, 3997795, 0, 65536, 3997796, 0, 65536, 3997797, 0, 65536, 3932263, 0, 65536, 3932264, 0, 65536, 3866730, 0, 65536, 3866731, 0, 65536, 3801198, 0, 65536, 3735666, 0, 65536, 3670133, 0, 65536, 3604598, 0, 65536, 3604599, 0, 65536, 3145848, 0, 65536, 3145849, 0, 65536, 3145850, 0, 65536, 3145851, 0, 65536, 3145852, 0, 65536, 3145853, 0, 65536, 3145854, 0, 65536, 3145855, 0, 65536, 3145856, 0, 65536, 3145857, 0, 65536, 3145858, 0, 65536, 3145859, 0, 65536, 3145860, 0, 65536, 3145861, 0, 65536, 3145862, 0, 65536, 3145863, 0, 65536, 3145864, 0, 65536, 3145865, 0, 65536, 3145866, 0, 65536, 3145867, 0, 65536, 3145868, 0, 65536, 3145869, 0, 65536, 3145870, 0, 65536, 3145871, 0, 65536, 3145872, 0, 65536, 3145873, 0, 65536, 3145874, 0, 65536, 3145875, 0, 65536, 3145876, 0, 65536, 3145877, 0, 65536, 3145878, 0, 65536, 3145879, 0, 65536, 3145880, 0, 65536, 3145881, 0, 65536, 3145882, 0, 65536, 3145883, 0, 65536, 3145884, 0, 65536, 3145885, 0, 65536, 3145886, 0, 65536, 3145887, 0, 65536, 3145888, 0, 65536, 3145889, 0, 65536, 3145890, 0, 65536, 3145891, 0, 65536, 3145892, 0, 65536, 3145893, 0, 65536, 3145894, 0, 65536, 3145895, 0, 65536, 3145896, 0, 65536, 3145897, 0, 65536, 3145898, 0, 65536, 3145899, 0, 65536, 3145900, 0, 65536, 3145901, 0, 65536, 3145902, 0, 65536, 3145903, 0, 65536, 3145904, 0, 65536, 3145905, 0, 65536, 3604600, 0, 65536, 3604601, 0, 65536, 3604602, 0, 65536, 3604603, 0, 65536, 3604604, 0, 65536, 3604605, 0, 65536, 3604606, 0, 65536, 3604607, 0, 65536, 3604608, 0, 65536, 3604609, 0, 65536, 3604610, 0, 65536, 3604611, 0, 65536, 3604612, 0, 65536, 3604613, 0, 65536, 3604614, 0, 65536, 3604615, 0, 65536, 3604616, 0, 65536, 3604617, 0, 65536, 3604618, 0, 65536, 3604619, 0, 65536, 3604620, 0, 65536, 3604621, 0, 65536, 3604622, 0, 65536, 3604623, 0, 65536, 3604624, 0, 65536, 3604625, 0, 65536, 3604626, 0, 65536, 3604627, 0, 65536, 3604628, 0, 65536, 3604629, 0, 65536, 3604630, 0, 65536, 3604631, 0, 65536, 3604632, 0, 65536, 3604633, 0, 65536, 3604634, 0, 65536, 3604635, 0, 65536, 3604636, 0, 65536, 3604637, 0, 65536, 3604638, 0, 65536, 3604639, 0, 65536, 3604640, 0, 65536, 3604641, 0, 65536, 3604642, 0, 65536, 3604643, 0, 65536, 3604644, 0, 65536, 3604645, 0, 65536, 3604646, 0, 65536, 3604647, 0, 65536, 3604648, 0, 65536, 3604649, 0, 65536, 3604650, 0, 65536, 3604651, 0, 65536, 3604652, 0, 65536, 3604653, 0, 65536, 3604654, 0, 65536, 3604655, 0, 65536, 3604656, 0, 65536, 3604657, 0, 65536, 2424917, 0, 65536, 2490456, 0, 65536, 2555996, 0, 65536, 2621535, 0, 65536, 2687074, 0, 65536, 2752614, 0, 65536, 2818153, 0, 65536, 2883692, 0, 65536, 2949231, 0, 65536, 3014771, 0, 65536, 3080310, 0, 65536, 3670134, 0, 65536, 3735667, 0, 65536, 3801199, 0, 65536, 3866732, 0, 65536, 3932265, 0, 65536, 3997798, 0, 65536, 4063330, 0, 65536, 4128863, 0, 65536, 4194396, 0, 65536, 4325461, 0, 65536, 4325393, 0, 65536, 4325392, 0, 65536, 4325391, 0, 65536, 4325390, 0, 65536, 4325389, 0, 65536, 4325388, 0, 65536, 4325387, 0, 65536, 4325386, 0, 65536, 4325385, 0, 65536, 4325384, 0, 65536, 4325383, 0, 65536, 4325382, 0, 65536, 4325381, 0, 65536, 4325380, 0, 65536, 4325379, 0, 65536, 4325378, 0, 65536, 4325377, 0, 65536, 4325376, 0, 65536, 2424832, 0, 65536, 3145906, 0, 65536, 3145907, 0, 65536, 3145908, 0, 65536, 3145909, 0, 65536, 3145910, 0, 65536, 3145911, 0, 65536, 3145912, 0, 65536, 3145913, 0, 65536, 3145914, 0, 65536, 3145915, 0, 65536, 3145916, 0, 65536, 3145917, 0, 65536, 3604658, 0, 65536, 3604659, 0, 65536, 3604660, 0, 65536, 3604661, 0, 65536, 3604662, 0, 65536, 3604663, 0, 65536, 3604664, 0, 65536, 3604665, 0, 65536, 3604666, 0, 65536, 3604667, 0, 65536, 3604668, 0, 65536, 3604669, 0, 65536, 3670205, 0, 65536, 3735741, 0, 65536, 3801277, 0, 65536, 3866813, 0, 65536, 3932349, 0, 65536, 3997885, 0, 65536, 4063421, 0, 65536, 4128957, 0, 65536, 4194493, 0, 65536, 4260029, 0, 65536, 4325565, 0, 65536, 4391101, 0, 65536, 4456637, 0, 65536, 4522173, 0, 65536, 4587709, 0, 65536, 4653245, 0, 65536, 4718781, 0, 65536, 4784317, 0, 65536, 4849853, 0, 65536, 4915389, 0, 65536, 3080381, 0, 65536, 3014845, 0, 65536, 2949309, 0, 65536, 2883773, 0, 65536, 2818237, 0, 65536, 2752701, 0, 65536, 2687165, 0, 65536, 2621629, 0, 65536, 2556093, 0, 65536, 2490557, 0, 65536, 2425021, 0, 65536, 2359485, 0, 65536, 2293949, 0, 65536, 2228413, 0, 65536, 2162877, 0, 65536, 2097341, 0, 65536, 2031805, 0, 65536, 1966269, 0, 65536, 1900733, 0, 65536, 1835197, 0, 65536, 4915390, 0, 65536, 4915391, 0, 65536, 4915392, 0, 65536, 4915393, 0, 65536, 4915394, 0, 65536, 4915395, 0, 65536, 4915396, 0, 65536, 4915397, 0, 65536, 4915398, 0, 65536, 4915399, 0, 65536, 4915400, 0, 65536, 4915401, 0, 65536, 4915402, 0, 65536, 4915403, 0, 65536, 4915404, 0, 65536, 4915405, 0, 65536, 4915406, 0, 65536, 4915407, 0, 65536, 4915408, 0, 65536, 4915409, 0, 65536, 4915410, 0, 65536, 4915411, 0, 65536, 4915412, 0, 65536, 4915413, 0, 65536, 4915414, 0, 65536, 4915415, 0, 65536, 4915416, 0, 65536, 4915417, 0, 65536, 4915418, 0, 65536, 4915419, 0, 65536, 4915420, 0, 65536, 4915421, 0, 65536, 4915422, 0, 65536, 4915423, 0, 65536, 4915424, 0, 65536, 4915425, 0, 65536, 4915426, 0, 65536, 4915427, 0, 65536, 4915428, 0, 65536, 4915429, 0, 65536, 4915430, 0, 65536, 4915431, 0, 65536, 4915432, 0, 65536, 4915433, 0, 65536, 4915434, 0, 65536, 4915435, 0, 65536, 4915436, 0, 65536, 4915437, 0, 65536, 4915438, 0, 65536, 4915439, 0, 65536, 4915440, 0, 65536, 4915441, 0, 65536, 4915442, 0, 65536, 4915443, 0, 65536, 4915444, 0, 65536, 4915445, 0, 65536, 4915446, 0, 65536, 4915447, 0, 65536, 4915448, 0, 65536, 4915449, 0, 65536, 4915450, 0, 65536, 4915451, 0, 65536, 4915452, 0, 65536, 4915453, 0, 65536, 4915454, 0, 65536, 4915455, 0, 65536, 4915456, 0, 65536, 4915457, 0, 65536, 4915458, 0, 65536, 4915459, 0, 65536, 4915460, 0, 65536, 4915461, 0, 65536, 4915462, 0, 65536, 4915463, 0, 65536, 4915464, 0, 65536, 4915465, 0, 65536, 4915466, 0, 65536, 4915467, 0, 65536, 4915468, 0, 65536, 4915469, 0, 65536, 4915470, 0, 65536, 4915471, 0, 65536, 4915472, 0, 65536, 4915473, 0, 65536, 4915474, 0, 65536, 1835282, 0, 65536, 1900818, 0, 65536, 1966354, 0, 65536, 2031890, 0, 65536, 2097426, 0, 65536, 2162962, 0, 65536, 2228498, 0, 65536, 2294034, 0, 65536, 2359570, 0, 65536, 2425106, 0, 65536, 2490642, 0, 65536, 2556178, 0, 65536, 2621714, 0, 65536, 2687250, 0, 65536, 2752786, 0, 65536, 2818322, 0, 65536, 2883858, 0, 65536, 2949394, 0, 65536, 3014930, 0, 65536, 3080466, 0, 65536, 3146002, 0, 65536, 3211538, 0, 65536, 3277074, 0, 65536, 3342610, 0, 65536, 3408146, 0, 65536, 3473682, 0, 65536, 3539218, 0, 65536, 3604754, 0, 65536, 3670290, 0, 65536, 3735826, 0, 65536, 3801362, 0, 65536, 3866898, 0, 65536, 3932434, 0, 65536, 3997970, 0, 65536, 4063506, 0, 65536, 4129042, 0, 65536, 4194578, 0, 65536, 4260114, 0, 65536, 4325650, 0, 65536, 4391186, 0, 65536, 4456722, 0, 65536, 4522258, 0, 65536, 4587794, 0, 65536, 4653330, 0, 65536, 4718866, 0, 65536, 4784402, 0, 65536, 4849938, 0, 65536, 1769661, 0, 65536, 1704125, 0, 65536, 1638589, 0, 65536, 1573053, 0, 65536, 1507517, 0, 65536, 1441981, 0, 65536, 1376445, 0, 65536, 1310909, 0, 65536, 1245373, 0, 65536, 1179837, 0, 65536, 1114301, 0, 65536, 1048765, 0, 65536, 1769746, 0, 65536, 1704210, 0, 65536, 1638674, 0, 65536, 1573138, 0, 65536, 1507602, 0, 65536, 1442066, 0, 65536, 1376530, 0, 65536, 1310994, 0, 65536, 1245458, 0, 65536, 1179922, 0, 65536, 1114386, 0, 65536, 1048850, 0, 65536, 2490368, 0, 65536, 2621439, 0, 65536, 2686975, 0, 65536, 2752511, 0, 65536, 2818046, 0, 65536, 2883582, 0, 65536, 2949118, 0, 65536, 2949117, 0, 65536, 3014653, 0, 65536, 3080189, 0, 65536, 3145725, 0, 65536, 3211261, 0, 65536, 3276797, 0, 65536, 3342333, 0, 65536, 3407869, 0, 65536, 3473405, 0, 65536, 3473404, 0, 65536, 3538940, 0, 65536, 3604476, 0, 65536, 3670012, 0, 65536, 3735548, 0, 65536, 3801084, 0, 65536, 3866620, 0, 65536, 3932156, 0, 65536, 3997692, 0, 65536, 4063228, 0, 65536, 4063229, 0, 65536, 4128765, 0, 65536, 4194301, 0, 65536, 4259837, 0, 65536, 4325373, 0, 65536, 4325374, 0, 65536, 4390910, 0, 65536, 4390911, 0, 65536, 2555903, 0, 65536, 2752510, 0, 65536, 2424918, 0, 65536, 2424919, 0, 65536, 2490457, 0, 65536, 2687075, 0, 65536, 2687076, 0, 65536, 2687077, 0, 65536, 2752615, 0, 65536, 2818154, 0, 65536, 2818155, 0, 65536, 2883693, 0, 65536, 2883694, 0, 65536, 2949232, 0, 65536, 3014772, 0, 65536, 4259928, 0, 65536, 4325462, 0, 65536, 4325463, 0, 65536, 4259929, 0, 65536, 4259930, 0, 65536, 4259931, 0, 65536, 4194397, 0, 65536, 4128864, 0, 65536, 4063331, 0, 65536, 3997799, 0, 65536, 3932266, 0, 65536, 3866733, 0, 65536, 3866734, 0, 65536, 3801200, 0, 65536, 3801201, 0, 65536, 3801202, 0, 65536, 3735668, 0, 65536, 3735669, 0, 65536, 4128861, 0, 65536)

[node name="intro_walls" type="TileMap" parent="."]
process_mode = 4
modulate = Color(1, 1, 1, 0)
tile_set = SubResource("TileSet_kvm6y")
format = 2
layer_0/tile_data = PackedInt32Array(2424833, 0, 65536, 2424834, 0, 65536, 2424835, 0, 65536, 2424836, 0, 65536, 2424837, 0, 65536, 2424838, 0, 65536, 2424839, 0, 65536, 2424840, 0, 65536, 2424841, 0, 65536, 2424842, 0, 65536, 2424843, 0, 65536, 2424844, 0, 65536, 2424845, 0, 65536, 2424846, 0, 65536, 2424847, 0, 65536, 2424848, 0, 65536, 2424849, 0, 65536, 2424850, 0, 65536, 2424851, 0, 65536, 2424852, 0, 65536, 2424853, 0, 65536, 2424854, 0, 65536, 2424855, 0, 65536, 2424856, 0, 65536, 2424857, 0, 65536, 2424858, 0, 65536, 2424859, 0, 65536, 2424860, 0, 65536, 2424861, 0, 65536, 2424862, 0, 65536, 2424863, 0, 65536)

[node name="start_level" type="Area2D" parent="." groups=["level start"]]
position = Vector2(351, 1051)

[node name="CollisionShape2D" type="CollisionShape2D" parent="start_level"]
position = Vector2(31.5, 0)
shape = SubResource("RectangleShape2D_vvhdu")

[node name="hurt_walls" type="TileMap" parent="."]
process_mode = 4
modulate = Color(3, 1, 1, 1)
tile_set = SubResource("TileSet_f6qy8")
format = 2
layer_0/tile_data = PackedInt32Array(3211426, 0, 65536, 3276962, 0, 65536, 3342498, 0, 65536, 3408034, 0, 65536, 3473570, 0, 65536, 3539106, 0, 65536)

[node name="hurt_wall" type="Area2D" parent="."]
position = Vector2(2592, 799)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_wall"]
process_mode = 4
position = Vector2(7, 33)
shape = SubResource("RectangleShape2D_abar2")

[node name="white_interactable" parent="." instance=ExtResource("11_aue4x")]
self_modulate = Color(1, 2.11, 2.55, 1)
position = Vector2(3690, 474)
amount = 100
emission_shape = 3
emission_rect_extents = Vector2(0, 50)
direction = Vector2(0, -1)
spread = 0.0
initial_velocity_min = 0.0
initial_velocity_max = 0.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_amount_min = 30.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_e30u8")

[node name="interactable_walls" type="TileMap" parent="white_interactable"]
position = Vector2(-3690, -474)
tile_set = SubResource("TileSet_hkh7d")
format = 2
layer_0/tile_data = PackedInt32Array(1048766, 0, 131072, 1048767, 0, 131072, 1048768, 0, 131072, 1048769, 0, 131072, 1048770, 0, 131072, 1048771, 0, 131072, 1048772, 0, 131072, 1048773, 0, 131072, 1048774, 0, 131072, 1048775, 0, 131072, 1048776, 0, 131072, 1048777, 0, 131072, 1048778, 0, 131072, 1048779, 0, 131072, 1048780, 0, 131072, 1048781, 0, 131072, 1048782, 0, 131072, 1048783, 0, 131072, 1048784, 0, 131072, 1048785, 0, 131072, 1048786, 0, 131072, 1048787, 0, 131072, 1048788, 0, 131072, 1048789, 0, 131072, 1048790, 0, 131072, 1048791, 0, 131072, 1048792, 0, 131072, 1048793, 0, 131072, 1048794, 0, 131072, 1048795, 0, 131072, 1048796, 0, 131072, 1048797, 0, 131072, 1048798, 0, 131072, 1048799, 0, 131072, 1048800, 0, 131072, 1048801, 0, 131072, 1048802, 0, 131072, 1048803, 0, 131072, 1048804, 0, 131072, 1048805, 0, 131072, 1048806, 0, 131072, 1048807, 0, 131072, 1048808, 0, 131072, 1048809, 0, 131072, 1048810, 0, 131072, 1048811, 0, 131072, 1048812, 0, 131072, 1048813, 0, 131072, 1048814, 0, 131072, 1048815, 0, 131072, 1048816, 0, 131072, 1048817, 0, 131072, 1048818, 0, 131072, 1048819, 0, 131072, 1048820, 0, 131072, 1048821, 0, 131072, 1048822, 0, 131072, 1048823, 0, 131072, 1048824, 0, 131072, 1048825, 0, 131072, 1048826, 0, 131072, 1048827, 0, 131072, 1048828, 0, 131072, 1048829, 0, 131072, 1048830, 0, 131072, 1048831, 0, 131072, 1048832, 0, 131072, 1048833, 0, 131072, 1048834, 0, 131072, 1048835, 0, 131072, 1048836, 0, 131072, 1048837, 0, 131072, 1048838, 0, 131072, 1048839, 0, 131072, 1048840, 0, 131072, 1048841, 0, 131072, 1048842, 0, 131072, 1048843, 0, 131072, 1048844, 0, 131072, 1048845, 0, 131072, 1048846, 0, 131072, 1048847, 0, 131072, 1048848, 0, 131072, 1048849, 0, 131072)

[node name="body_interactable" type="StaticBody2D" parent="." groups=["wall"]]
position = Vector2(3039, 164)

[node name="CollisionShape2D" type="CollisionShape2D" parent="body_interactable"]
position = Vector2(672, 100)
shape = SubResource("RectangleShape2D_oi15e")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wvwa6")

[node name="red_spawn" parent="." instance=ExtResource("14_x2njw")]
position = Vector2(3321, 1100)
speed_scale = 0.25
orbit_velocity_min = 4.0
orbit_velocity_max = 4.0

[node name="red_spawn2" parent="." instance=ExtResource("14_x2njw")]
position = Vector2(4105, 1100)
speed_scale = 0.25
orbit_velocity_min = 4.0
orbit_velocity_max = 4.0

[node name="red_spawndec" parent="." instance=ExtResource("14_x2njw")]
position = Vector2(2252, 427)
speed_scale = 0.25
orbit_velocity_min = 4.0
orbit_velocity_max = 4.0
script = null

[node name="red_spawndec2" parent="." instance=ExtResource("14_x2njw")]
position = Vector2(1935, 1141)
speed_scale = 0.25
orbit_velocity_min = 4.0
orbit_velocity_max = 4.0
script = null

[node name="red_spawndec3" parent="." instance=ExtResource("14_x2njw")]
position = Vector2(1134, 1180)
speed_scale = 0.25
orbit_velocity_min = 4.0
orbit_velocity_max = 4.0
script = null

[node name="red_spawndec4" parent="." instance=ExtResource("14_x2njw")]
position = Vector2(-232, 489)
speed_scale = 0.25
orbit_velocity_min = 4.0
orbit_velocity_max = 4.0
script = null

[node name="lock_walls" type="TileMap" parent="."]
tile_set = SubResource("TileSet_njsg3")
format = 2
layer_0/tile_data = PackedInt32Array(3211453, 0, 131072, 3276989, 0, 131072, 3342525, 0, 131072, 3408061, 0, 131072, 3473597, 0, 131072, 3539133, 0, 131072)

[node name="red_intro" type="CPUParticles2D" parent="."]
position = Vector2(3671, -533)
amount = 151
local_coords = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 400.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
orbit_velocity_min = 1.0
orbit_velocity_max = 1.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 20.0
scale_amount_max = 20.0
color = Color(1, 0, 0, 1)
color_ramp = SubResource("Gradient_pa7td")

[node name="red_intro_area" type="Area2D" parent="red_intro"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="red_intro/red_intro_area"]
visible = false
shape = SubResource("CircleShape2D_tdsa1")

[node name="damage" type="CPUParticles2D" parent="red_intro"]
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
explosiveness = 0.75
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 800.0
initial_velocity_max = 800.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 30.0
scale_amount_max = 30.0
color = Color(1, 0, 0, 0.392157)
color_ramp = SubResource("Gradient_n12bs")

[node name="death" type="CPUParticles2D" parent="red_intro"]
emitting = false
amount = 300
lifetime = 2.0
speed_scale = 2.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 800.0
initial_velocity_max = 800.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 30.0
scale_amount_max = 30.0
color = Color(1, 0, 0, 0.392157)
color_ramp = SubResource("Gradient_n12bs")

[node name="hurt" type="AudioStreamPlayer2D" parent="red_intro"]
stream = ExtResource("4_mwyo1")
volume_db = -10.0
pitch_scale = 0.5
max_distance = 1000.0

[node name="die" type="AudioStreamPlayer2D" parent="red_intro"]
stream = ExtResource("15_tbgps")
volume_db = 5.0
pitch_scale = 0.2

[connection signal="area_entered" from="start_level" to="." method="_on_start_level_area_entered"]
[connection signal="area_entered" from="hurt_wall" to="." method="_on_hurt_wall_area_entered"]
[connection signal="area_exited" from="hurt_wall" to="." method="_on_hurt_wall_area_exited"]
[connection signal="area_entered" from="red_intro/red_intro_area" to="." method="_on_red_intro_area_area_entered"]
